text processing pipeline