@@ -36,26 +36,52 @@ check_tracks
 
 ### text_processing (MATLAB + Python):
 This code implements the text processing pipeline as described in the paper [1].
-all1.bat :
 
-1. Download StanfordCoreNLP
-2. Modify the paths in the files preprocess_all.m,
-3. Sign up to TMDB, obtain an api_key and add it to preprocess_all.m. For new movies you need to form new queries to the database.
-4.  We assume that the movie script and the subtitles files have the same name with the movie (extension .txt and .srt.txt respectively) and are located in a folder that has also the same name.
+1. Download and setup (set up your classpath) StanfordCoreNLP https://stanfordnlp.github.io/CoreNLP/download.html (Our code is tested with CoreNLP 3.9.1)
+2. Modify the path in the files preprocess_all.m, parse_xml.py, labels_extractor_all.m, align_subs_script_all.m, classify_verbs.py, tidy_similarities.m in order to point to the folder where your movies are saved.
+3. Modify the path in the file classify_verbs.py in order to point in the folder where your action categories are saved. We provide our action categories in categories_ids_47.mat and in an extended version categories_ids.mat. Also you can modify the sentence similarity method.
+4. Sign up to TMDB, obtain an api_key and add it to preprocess_all.m. For new movies you need to form new queries to the database.
+5. We assume that the movie script and the subtitles files have the same name with the movie (extension .txt and .srt.txt respectively) and are located in a folder that has also the same name.
+6. The script files need to comply with the common screenplay format rules (in terms of indentation and capitalisation) in order to be properly segmented. The format is the following:
+
 ```
-preprocess_all({'BMI', 'CRA', 'DEP', 'GLA', 'LOR'}):	preprocesses the scripts,
+SCENE
+        SPEAKER
+	Monologue
+Description
 ```
-					transforms them to the format used for the script segmentation (MONOLOGUE, DESCRIPTION, etc.)
-					downloads cast list from TMDB (personal api key needed) ,preprocesses it and saves the query regular expressions
-	calls StanfordCoreNLP (needs to be downloaded) annotators : tokenize,ssplit,pos,lemma,depparse
-	calls StanfordCoreNLP ner (optional), regexner (regular expressions created by preprocess_all
-all2.bat :
-	parse_xml_all: 	parses the xml output of StanfordCoreNLP
-	labels_extractor_all : processes StanfordCoreNLP output and creates initial labels, short sentences, etc.
-	align_subs_script_all : applies script segmentation and script to subtitle alignment
-							(credits to Dr. Bojanowski - I made small modifications on the code)
-	classify_verbs_slow	 : calculates semantic similarity
-	tidy_similarities : creates similarity vectors
+add example here
+
+
+The entire text processing pipeline can be executed with the following commands:
+
+```
+a. preprocess_all({'BMI', 'CRA', 'DEP', 'GLA', 'LOR'}):	(MATLAB) preprocesses the scripts, fixes indentation and capitalisation, extracts the cast list from TMDB and transforms it to query regular expressions, creates a a file that contains the paths for the movies that need to be processed
+```
+
+```
+Go to the folder where your movies are saved, open a terminal and run:
+
+b. java -cp "*" -Xmx1200m edu.stanford.nlp.pipeline.StanfordCoreNLP -enforceRequirements false -annotators tokenize,ssplit,pos,lemma,depparse -filelist filelist1.txt -outputDirectory serialized_outputs/ -outputFormat serialized --add-modules java.se.ee:  Executes all the necessary annotators in order to perform the dependency parsing on each document
+
+Modify this movie list if necessary
+c. for i in BMI CRA DEP GLA LOR; do
+	java --add-modules java.se.ee -cp "../stanford-corenlp-full-2018-01-31/*" -Xmx1200m edu.stanford.nlp.pipeline.StanfordCoreNLP -enforceRequirements false -annotators regexner -file 	serialized_outputs/"$i"_preprocessed.txt.ser.gz -regexner.mapping "$i"/results_script/"$i"_mapping.txt -outputDirectory "$i"/results_script/
+done: Annotates the script with person labels according to the regular expression queries.
+```
+
+```
+d. python parse_xml: parses the xml output of CoreNLP (Our code is tested with Python 3.6.3)
+e. labels_extractor_all({'BMI' , 'CRA', 'DEP', 'GLA', 'LOR'}) :(MATLAB) 	Extracts person labels from the CoreNLP annotation and creates short sentences for the sentence similarity algorithm
+f.  cd read_xml_script;
+fps_1=24.9997500025000;
+align_subs_script_all({'BMI', 'CRA', 'DEP', 'GLA', 'LOR'},1,[fps_1 fps_1 fps_1 fps_1 fps_1]): (MATLAB) segments the scripts and performs the crude alignment between the script and the subtitles - the code was obtained from Dr. Bojanowski and got slightly modified
+g. python classify_verbs_slow.py: Implements various sentence similarity algorithms
+e. tidy_similarities({'BMI', 'CRA', 'DEP', 'GLA', 'LOR'}, 'wordnet'): (MATLAB) Post-processing of the similarity vectors - change the similarity method if necessary. The 'wordnet' method (hybrid LSA + wordnet [5]), is time consuming because it makes http requests to the author's online API. 
+```
+
+### multimodal_learning_weakly_supervised (MATLAB + mosek):
+
 3)my-actor-action (MATLAB) : learning algorithms - based on the code used for Bojanowski et. al 2013
 	typical execution:
 	a) 	final_labels_all(movies,cast_list_flag,person_tagnames,action_tagnames) : extracts final labels from the outputs of text pipeline
@@ -80,3 +106,5 @@ References
 [2] M. Everingham, J. Sivic and A. Zisserman. "Hello! My name is... Buffy" - Automatic Naming of Characters in TV Video. BMVC 2006.
 [3] J. Sivic, M. Everingham and A. Zisserman. "Who are you?" : Learning person specific classifiers from video. CVPR 2009.
 [4] P. Bojanowski, F. Bach, I. Laptev, J. Ponce, C. Schmid, and J. Sivic. Finding actors and actions in movies. ICCV 2013
+[5] L. Han, A. Kashyap, T. Finin, J. Mayfield, and J. Weese.
+Umbc ebiquity-core: Semantic textual similarity systems. *SEM, 2013
